# xbmc

./: .gitignore  CMakeLists.txt
addons/resource.language.en_gb/resources/: strings.po
addons/skin.confluence/720p/: MusicVisualisation.xml  MyPrograms.xml  SlideShow.xml  VideoFullScreen.xml  Viewtype_LauncherInfo.xml  includes.xml
cmake/scripts/common/: Macros.cmake
cmake/scripts/ios/: ArchSetup.cmake
cmake/scripts/osx/: ArchSetup.cmake
language/English/: strings.po
lib/: DllAvCodec.h
lib/libUPnP/: CMakeLists.txt
lib/libdvd/: CMakeLists.txt
lib/libdvd/libdvdcss/: CMakeLists.txt  config.h.in
lib/libdvd/libdvdnav/: CMakeLists.txt
lib/libdvd/libdvdread/: CMakeLists.txt  config.h.in
platform_override/option1/: CMakeLists.txt  generic_settings.h
platform_override/option1/overrides/android/: settings.h
platform_override/option1/overrides/generic/: settings.h
platform_override/option2/: CMakeLists.txt  settings.h
platform_override/option2/overrides/android/: settings.h
platform_override/option3/: CMakeLists.txt  main.cpp  settings.h
platform_override/option4/: CMakeLists.txt  Settings.cmake  settings.h.in
platform_override/option4/overrides/android/: Settings.cmake
platform_override/option5/: CMakeLists.txt  settings.h
project/cmake/: CMakeLists.txt  Documentation.md  README.md
project/cmake/addons/addons/game.libretro.2048/: game.libretro.2048.txt
project/cmake/addons/addons/game.libretro.4do/: game.libretro.4do.txt
project/cmake/addons/addons/game.libretro.beetle-bsnes/: game.libretro.beetle-bsnes.txt
project/cmake/addons/addons/game.libretro.beetle-gba/: game.libretro.beetle-gba.txt
project/cmake/addons/addons/game.libretro.beetle-lynx/: game.libretro.beetle-lynx.txt
project/cmake/addons/addons/game.libretro.beetle-ngp/: game.libretro.beetle-ngp.txt
project/cmake/addons/addons/game.libretro.beetle-pce-fast/: game.libretro.beetle-pce-fast.txt
project/cmake/addons/addons/game.libretro.beetle-pcfx/: game.libretro.beetle-pcfx.txt
project/cmake/addons/addons/game.libretro.beetle-psx/: game.libretro.beetle-psx.txt
project/cmake/addons/addons/game.libretro.beetle-supergrafx/: game.libretro.beetle-supergrafx.txt
project/cmake/addons/addons/game.libretro.beetle-vb/: game.libretro.beetle-vb.txt
project/cmake/addons/addons/game.libretro.beetle-wswan/: game.libretro.beetle-wswan.txt
project/cmake/addons/addons/game.libretro.bluemsx/: game.libretro.bluemsx.txt
project/cmake/addons/addons/game.libretro.bnes/: game.libretro.bnes.txt
project/cmake/addons/addons/game.libretro.bsnes-mercury-accuracy/: game.libretro.bsnes-mercury-accuracy.txt
project/cmake/addons/addons/game.libretro.bsnes-mercury-balanced/: game.libretro.bsnes-mercury-balanced.txt
project/cmake/addons/addons/game.libretro.bsnes-mercury-performance/: game.libretro.bsnes-mercury-performance.txt
project/cmake/addons/addons/game.libretro.cap32/: game.libretro.cap32.txt
project/cmake/addons/addons/game.libretro.desmume/: game.libretro.desmume.txt
project/cmake/installdata/windows/: python.txt
project/cmake/modules/: FindJsonSchemaBuilder.cmake  FindLibDvd.cmake  FindMySqlClient.cmake  FindPython.cmake
project/cmake/scripts/common/: macros.cmake
project/cmake/scripts/darwin/: archsetup.cmake  install.cmake  macros.cmake
project/cmake/scripts/linux/: macros.cmake
project/cmake/scripts/windows/: archsetup.cmake  install.cmake  pathsetup.cmake
system/settings/: settings.xml
tools/EventClients/Clients/OSXRemote/: CMakeLists.txt
tools/buildsteps/osx64/: package
tools/darwin/Support/: CopyRootFiles-osx.command  copyframeworks-osx.command  updateversioninfo-osx.command
tools/darwin/packaging/osx/: mkdmg-osx.sh.in
tools/depends/native/TexturePacker/: CMakeLists.txt
xbmc/: ApplicationPlayer.cpp  ApplicationPlayer.h  CMakeLists.txt  GUIInfoManager.cpp  GUIInfoManager.h
xbmc/addons/: CMakeLists.txt
xbmc/cdrip/: CMakeLists.txt
xbmc/contrib/kissfft/: CMakeLists.txt
xbmc/cores/: CMakeLists.txt  IPlayer.h
xbmc/cores/AudioEngine/: CMakeLists.txt
xbmc/cores/DllLoader/: CMakeLists.txt
xbmc/cores/DllLoader/exports/: CMakeLists.txt
xbmc/cores/VideoPlayer/: CMakeLists.txt  VideoPlayer.cpp
xbmc/cores/VideoPlayer/DVDCodecs/: CMakeLists.txt
xbmc/cores/VideoPlayer/DVDCodecs/Audio/: CMakeLists.txt
xbmc/cores/VideoPlayer/DVDDemuxers/: CMakeLists.txt
xbmc/cores/VideoPlayer/DVDInputStreams/: CMakeLists.txt
xbmc/cores/VideoPlayer/DVDSubtitles/: CMakeLists.txt
xbmc/cores/VideoPlayer/VideoRenderers/: CMakeLists.txt  RenderManager.cpp
xbmc/cores/dvdplayer/: DVDPlayer.cpp  DVDPlayer.h  Edl.cpp  Edl.h
xbmc/cores/dvdplayer/DVDDemuxers/: DVDDemux.h  DVDDemuxFFmpeg.cpp  DVDDemuxFFmpeg.h  DVDFactoryDemuxer.cpp
xbmc/cores/paplayer/: CMakeLists.txt
xbmc/cores/playercorefactory/: CMakeLists.txt
xbmc/dbwrappers/: CMakeLists.txt
xbmc/filesystem/: CMakeLists.txt
xbmc/guilib/: CMakeLists.txt  GUIControl.h  GUIControlFactory.cpp  GUIMarkerControl.cpp  GUIMarkerControl.h  GUIProgressControl.cpp  GUISliderControl.cpp  Makefile.in
xbmc/input/: ButtonTranslator.cpp
xbmc/interfaces/json-rpc/: CMakeLists.txt
xbmc/interfaces/swig/: CMakeLists.txt
xbmc/music/tags/: CMakeLists.txt
xbmc/music/windows/: CMakeLists.txt
xbmc/network/: CMakeLists.txt
xbmc/pictures/: CMakeLists.txt  PictureInfoTag.cpp
xbmc/platform/darwin/: CMakeLists.txt
xbmc/platform/posix/: CMakeLists.txt
xbmc/pvr/: PVRManager.cpp  PVRManager.h
xbmc/pvr/recordings/: CMakeLists.txt
xbmc/pvr/windows/: CMakeLists.txt
xbmc/settings/: AdvancedSettings.cpp  AdvancedSettings.h  CMakeLists.txt  Settings.cpp  Settings.h
xbmc/settings/dialogs/: CMakeLists.txt
xbmc/storage/: CMakeLists.txt
xbmc/utils/: CMakeLists.txt
xbmc/utils/test/: CMakeLists.txt
xbmc/video/: CMakeLists.txt
xbmc/video/dialogs/: CMakeLists.txt
xbmc/video/windows/: CMakeLists.txt
xbmc/windowing/: CMakeLists.txt  WinEvents.cpp
xbmc/windowing/X11/: CMakeLists.txt  WinSystemX11.cpp
xbmc/windowing/egl/: CMakeLists.txt
xbmc/windowing/osx/: CMakeLists.txt
xbmc/windows/: CMakeLists.txt
(+42 files in other folders)
